test/expected/declare_hd.out
declare x as short double
        ^
9: error: "short double" is illegal for built-in type
